hphp/hack/test/typecheck/async_hint3.php.exp
File "async_hint3.php", line 4, characters 30-40:
Was expecting an `Awaitable` return type hint (Typing[4174])
