hphp/hack/test/typecheck/async_hint3.php
<?hh

// Testing function
async function wrong_hint(): varray<int> {
  throw new Exception();
}
